CHANGES IN VERSION 1.9.6
------------------------

CHANGES IN VERSION 1.9.5
------------------------
 o Added data from Mulvey et al. 2015 <2016-04-04 Mon>
 
CHANGES IN VERSION 1.9.4
------------------------
 o Added the STRING-db tab delimitated PPI data for transfer learning
   example <2016-02-29 Mon>
 
CHANGES IN VERSION 1.9.3
------------------------
 o data unit tests <2016-02-09 Tue>
 
CHANGES IN VERSION 1.9.2
------------------------
 o fixed bug in E14TG2aS1 fData [2015-08-02 Mon] 

CHANGES IN VERSION 1.9.1
------------------------
 o added fraction information to hyperLOPIT data [2015-11-04 Wed] 
 o reverted fraction order, fixed bug in hyperLOPIT
   make script [2015-11-05 Thu]
 o Added fraction number order [2015-11-05 Thu]

CHANGES IN VERSION 1.9.0
------------------------
 o New version for Bio devel 3.3
 
CHANGES IN VERSION 1.8.0
------------------------
 o New version for Bio release 3.2
 
CHANGES IN VERSION 1.7.4
------------------------
 o new hyperLOPIT datasets on mouse stem cells
   [2015-10-07 Wed] 

CHANGES IN VERSION 1.7.3
------------------------
 o Fix typo in man pages [2015-09-08 Tue]
 
CHANGES IN VERSION 1.7.2
------------------------
 o added HPA, GOCC and YLOC datasets from Breckels et al 2015
   and all optimised parameters [2015-07-16 Thu]
 
CHANGES IN VERSION 1.7.1
------------------------
 o update tan2009 data [2015-04-17 Fri]
 o update dunkley2006, fixing named fData()$fcol fvars
   [2015-04-18 Sat]
 
CHANGES IN VERSION 1.7.0
------------------------
 o new devel version for Bioc 3.2

CHANGES IN VERSION 1.5.8
------------------------
 o added transfer learning results from Breckels et al 2015 to
   experimentData [2015-04-07 Thu] 

CHANGES IN VERSION 1.5.7
------------------------
 o added results from transfer learning from Breckels et al 2015
   to E14TG2a datasets [2015-03-23 Mon]
 o added knntl and svmtl parameters used for classification to
   experimentData slot in E14TG2aS1 dataset [2015-03-26 Thu]
  