@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.9.6
 ------------------------
+ o Added TL parameters for E15TG2a from Breckels et al. 2016 
+   [2016-06-29 Wed]
 
 CHANGES IN VERSION 1.9.5
 ------------------------
